feat: create news handler finished
